[tool.poetry]
name = "cracking-the-coding-interview"
version = "0.1.0"
description = ""
authors = ["Rebekka Haley <rebekka.haley@gmail.com>"]
readme = "README.md"
packages = [{include = "cracking_the_coding_interview"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
