[tool.poetry]
name = "cracking-the-coding-interview"
version = "0.1.0"
description = ""
authors = ["Rebekka Haley <rebekka.haley@gmail.com>"]
readme = "README.md"
packages = [{include = "cracking_the_coding_interview"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
pandas = "^1.5.0"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
scipy = "^1.9.1"
pylint = "^2.15.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
